--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  health-check-job:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -24,13 +24,18 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - uses: actions/setup-python@v2
+        with:
+          python-version: "3.x"
+          cache: 'pip'
+      - run: pip install -r requirements.txt
+      # Check Python version
+      - name: Check python version
+        run: python --version
+      
+      - name: Run Migrations
+        run: python manage.py migrate
+      
+      - name: Run Unit Tests
+        run: python manage.py test chat
+    
