--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -8,9 +8,8 @@ on:
   push:
     branches:
       - main
-      - 'feature/*'
   pull_request:
-    branches: [ main , 'feature/*']
+    branches: [ main ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -21,7 +20,6 @@ jobs:
   health-check-job:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -40,4 +38,8 @@ jobs:
       
       - name: Run Unit Tests
         run: python manage.py test chat
+  package-job:
+    runs-on: ubuntu-latest
+    environment: GKE-CICD
+
     
